# parallel_prefix_sum

./: CMakeLists.txt  README.md
include/: scan.cuh  utils.h
src/: main.cpp  scan.cu  utils.cpp
